# umapper

./: .codecov.yml  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: coverage-publish.yml  python-publish.yml
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst  usage.md
tests/: run_tests.sh  test_mappings.py
umapper/: __init__.py  core.py
