
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "umapper"
version = "0.1.3"
description = "Data mapping facilities"
authors = [
	{ name = "Gustavo Venturini", email = "gustavo.c.venturini@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
	"pyhumps==3.8.0"
]
readme = { file = "README.md", content-type = "text/markdown" }
license = {text = "MIT"}
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3 :: Only",
]

[project.urls]
"Homepage" = "https://github.com/vottini/umapper"

